# rhapsody

./: .actrc  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CHANGES.md  CLAUDE.md  LICENSE.md  MANIFEST.in  Makefile  README.md  _typos.toml  dragon_isolation.md  dragon_test.md  dragon_test.py  mkdocs.yml  pyproject.toml  requirements.txt  rhapsody-partitions.md  setup.py  tox.ini
.github/: actionlint.yaml
.github/workflows/: ci.yml  docs.yml
docs/: about.md  contributing.md  gen_ref_pages.py  index.md  integrations.md  landing-old.html  landing.html
docs/api/: index.md
docs/getting-started/: advanced-usage.md  configuration.md  first-workflow.md  index.md  installation.md  quick-start.md  resource-specification.md
docs/hpc-machines/: anvil.md  bridges2.md  index.md  ncsa-delta.md  perlmutter.md
docs/javascripts/: mermaid-init.js
docs/project/: index.md  nsf-award.md  publications.md  roadmap.md  team.md
docs/reference/: backends.md  configuration.md  core.md  index.md  session.md  task.md  utilities.md
docs/stylesheets/: extra.css
docs/telemetry/: faq.md  index.md  integrations.md  quickstart.md  reference.md
examples/: 00-workload-async-gather.py  00-workload-native-api.py  00-workload.py  01-workflow.py  01-workload-async-gather.py  01-workload-native-api.py  02-workload-heterogeneous.py  03-workload-ai-hpc.py  04-integration-asyncflow.py  05-dask-backend.py  06-partitions.py  06-telemetry.py  README.md  partitions.py
examples/julia/: 01_script_task.py  02_driver.jl  03_function_task.py  Manifest.toml  Project.toml  README.md  _rhapsody_helper.py  call_fn.jl  hello.jl  mymod.jl
examples/telemetry/: 00-telemetry.py  README.md  gpu-cuda-stress.cu  plot_dashboard.py  plot_session_snapshot.py
examples/telemetry/viz/: README.md  bridge.py  fake_dragon_stream.py  index.html  run_live_demo.py  run_real_session.py  viz.js
src/rhapsody/: __init__.py  coordinator.py  logger.py  session.py  task.py  worker.py
src/rhapsody/api/: __init__.py  errors.py  session.py  task.py
src/rhapsody/backends/: __init__.py  base.py  constants.py  discovery.py
src/rhapsody/backends/execution/: __init__.py  concurrent.py  dask_parallel.py  dragon.py  edge.py  mpix.py  noop.py  radical_pilot.py
src/rhapsody/backends/execution/flux/: __init__.py  flux_backend.py  flux_helper.py  flux_module.py  flux_service.py
src/rhapsody/backends/inference/: __init__.py  vllm.py
src/rhapsody/backends/multiproc/: __init__.py  host.py  proxy.py  spawn.py  wire.py
src/rhapsody/client/: client.py
src/rhapsody/launchers/: _base.py
src/rhapsody/resource_manager/: __init__.py  base.py  cobalt.py  fork.py  lsf.py  pbspro.py  slurm.py  torque.py
src/rhapsody/telemetry/: __init__.py  events.py  manager.py
src/rhapsody/telemetry/adapters/: __init__.py  base.py  concurrent.py  dask.py  dragon.py
src/rhapsody/telemetry/interfaces/: __init__.py  reader.py  subscriber.py
src/rhapsody/utils/: __init__.py  proxy.py
tests/: conftest.py  test_asyncflow_integration.py  test_backend_basics.py  test_backend_functionality.py  test_backend_performance.py  test_realworld_integration.py
tests/dragon_ci/: README.md  _dragon_ci_helpers.py  conftest.py  pytest.ini  test_async_in_batch.py  test_batch_function.py  test_batch_job.py  test_batch_lifecycle.py  test_batch_process.py  test_ddict.py  test_ddict_unknown_key_blocks.py  test_machine_system.py  test_policy.py  test_process_group.py  test_process_template.py  test_queue_event.py  test_sigkill_in_worker_hangs.py  test_telemetry_collector.py  test_unpickleable_function_hangs.py  test_worker_failure_modes.py
tests/dragon_ci/_offpath/: marker_helper.py
tests/integration/: test_backend_functionality.py  test_backend_performance.py  test_flux_backend.py  test_realworld_integration.py  test_task_api_backend_integration.py  test_telemetry_e2e.py
tests/integration/test-hpc/: conftest.py
tests/integration/test-hpc/dragon/: README.md  conftest.py  hpc_workers.py  pytest.ini  test_mpi.py  test_multinode_gpu.py  test_pinning.py  test_scale.py  test_singlenode_gpu.py
tests/performance/: test_api_performance.py  test_telemetry_throughput.py
tests/unit/: test_backend_base.py  test_backend_constants.py  test_backend_discovery.py  test_backend_execution_concurrent.py  test_backend_execution_dask_parallel.py  test_backend_execution_dragon.py  test_backend_execution_edge.py  test_backend_execution_flux.py  test_backend_execution_radical_pilot.py  test_backends_multiproc.py  test_dask_custom_cluster.py  test_session.py  test_task_api.py  test_viz_bridge.py
tests/unit/resource_manager/: test_rm_base.py  test_rm_fork.py  test_rm_initialization.py  test_rm_partition_env.py  test_rm_slurm.py
tests/unit/resource_manager/test_cases/: frontier_slurm_2.env
tests/unit/telemetry/: conftest.py  test_adapters_concurrent.py  test_adapters_dask.py  test_adapters_dragon.py  test_events.py  test_manager.py  test_otel_contract.py  test_session_integration.py
tutorials/: README.md  basic-usage.ipynb  dask-backend-tutorial.ipynb  dragon-resource-placement.ipynb  rhapsody-tutorial.ipynb
